2004-08-01  John Paul Wallington  <jpw@gnu.org>

	* printing.el (toplevel, pr-ps-fast-fire, pr-ps-set-utility)
	(pr-ps-set-printer, pr-txt-set-printer, pr-eval-setting-alist)
	(pr-switches): Remove period from end of error messages.

	* help-mode.el (help-go-back): Likewise.

	* abbrev.el (only-global-abbrevs): Doc fix.
	(edit-abbrevs-map): Define within defvar.
	(quietly-read-abbrev-file): Doc fix.

2004-07-31  Luc Teirlinck  <teirllm@auburn.edu>

	* novice.el (enable-command, disable-command): Doc fixes.

	* subr.el (event-modifiers, event-basic-type): Doc fixes.

2004-07-30  Richard M. Stallman  <rms@gnu.org>

	* subr.el (with-local-quit): Doc fix.

2004-07-30  Luc Teirlinck  <teirllm@auburn.edu>

	* international/utf-8.el (utf-translate-cjk-mode): Doc fix.

2004-07-28  Luc Teirlinck  <teirllm@auburn.edu>

	* custom.el (defcustom): Doc fix.

2004-07-28  Masatake YAMATO  <jet@gyve.org>

	* progmodes/etags.el (etags-tags-apropos): Show building progress.

2004-07-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* imenu.el (imenu-prev-index-position-function)
	(imenu-extract-index-name-function, imenu-name-lookup-function)
	(imenu--index-alist): Docstring redundancy fix.

2004-07-25  Lars Hansen  <larsh@math.ku.dk>

	* wdired.el (wdired-finish-edit): Require dired-aux before locally
	binding dired-backup-overwrite.

2004-07-25  John Paul Wallington  <jpw@gnu.org>

	* subr.el (butlast, event-modifiers, event-basic-type): Doc fixes.

2004-07-24  Luc Teirlinck  <teirllm@auburn.edu>

	* term/tty-colors.el (tty-color-approximate): Doc fix.

	* select.el (x-get-selection, x-set-selection): Doc fixes.

	* frame.el (make-frame): Doc fix.

2004-07-24  Richard M. Stallman  <rms@gnu.org>

	* mail/rmail.el (rmail-mime-charset-pattern):
	Don't include semicolon in the charset value.

	* replace.el (occur-next-error): Call set-window-point.
	(occur-engine): Handle negative NLINES.

2004-07-23  Luc Teirlinck  <teirllm@auburn.edu>
