@@ -1,3 +1,11 @@
+2004-08-01  David Kastrup  <dak@gnu.org>
+
+	* replace.el (query-replace-read-from): Use
+	`query-replace-compile-replacement'.
+	(query-replace-compile-replacement): New function.
+	(query-replace-read-to): Use `query-replace-compile-replacement'
+	for repeating the last command.
+
 2004-08-01  John Paul Wallington  <jpw@gnu.org>
 
 	* printing.el (toplevel, pr-ps-fast-fire, pr-ps-set-utility)
